Project 3: Customer Segments, 2nd Submission

--- a/projects/customer_segments/customer_segments.ipynb
+++ b/projects/customer_segments/customer_segments.ipynb
@@ -2099,19 +2099,17 @@
    "source": [
     "**Answer:**\n",
     "\n",
+    "*(Note: This is my second attempt at answering. My current answer is influenced by my previous submission's reviewer.)*\n",
+    "\n",
     "In total, the first and second principal components explain 70.7% of the variance in the data.\n",
     "\n",
     "When looking at the first four principal components, 93.1% of the variance is explained.\n",
     "\n",
-    "Looking at the visualization, I'm basically drawn to the longest bars for each dimension.\n",
-    "* Dimension 1: Negative-weighted Detergents_Paper, Grocery, Milk\n",
-    "* Dimension 2: Negative-weighted Fresh, Frozen, Deli\n",
-    "* Dimension 3: Negative-weighted Fresh + positive-weighted Frozen and Deli\n",
-    "* Dimension 4: Positive-weighted Frozen + negative-weighted Deli\n",
-    "\n",
-    "In general, the first dimension represent mainly spending from Detergents_Paper, Grocery, and Milk. The next three dimensions represent mainly spending from Fresh, Frozen, and Deli.\n",
-    "\n",
-    "NOTE: The last two dimensions that represent about 7% of the explained variance go back to representing mainly the Detergents_Paper, Grocery, and Milk. I guess I'm supposed to notice that those were the features that had positive R^2 values in Question 2? The last dimension that explains only 2% of the explained variance is most affected by the Grocery, which is the one that I potentially considered removing based on the R^2 score alone."
+    "About each dimension:\n",
+    "* Dimension 1: A good chunk of customers seem to be buying mainly Fresh and Frozen items for their establishments. There are strong-to-moderate negatively weighted Detergents_Paper, Grocery, and Milk. There's a small negative weight on Delicatessen. Finally, there are small positive weights on Fresh and Frozen. As a customer's score in this section goes up, they will buy less detergent, grocery and milk while buying a little more fresh and frozen. A low scoring customer for this component would buy a lot of Detergents_Paper, Grocery, Milk, and Delicatessen, while purchasing very little of Fresh and Frozen. \n",
+    "* Dimension 2: A good chunk of customers may not be buying a lot. This dimension has negative weights for all of the feature categories. The customer that scores well with this dimension would buy very little in general, and that customer would NOT purchase a lot of Fresh, Frozen, or Delicatessen items in particular (because those weights are strong-to-moderately negative). A low scoring customer from this component would be the opposite and might spend on a lot of money on Fresh, Frozen, or Delicatessen. This customer isn't a big retail grocery store, but it might be a store that sells a small amount of milk, groceries and cleaning supplies. \n",
+    "* Dimension 3: This dimension has high positive weights on Deli and Frozen items and a highly negative weight on fresh and detergents/cleaning items. I think that a high scoring customer for this dimension might be just reselling frozen and deli foods for his or her business. I don't think it's cooking up these items for its own customer directly. Otherwise, the fresh and cleaning/paper purchases might be higher.\n",
+    "* Dimension 4: A customer scoring high in this fourth dimension buys a lot of Frozen food and some Paper/Cleaning supplies, while avoiding Fresh or Deli foods.  I think this customer might heat up and serve a lot of pizzas, burgers, and french fries for his or her business. I don't think a high scoring customer would be running a farm to table sort of establishment."
    ]
   },
   {
@@ -3080,7 +3078,7 @@
     "\n",
     "Out of curiosity, I went back and changed my number of clusters from 3 to 2, and the clustering looks better. (See below.) \n",
     "\n",
-    "I also wondered about whether or not I should have tried GMM instead of a K-means clustering. I don't that did much better with my features."
+    "I also wondered about whether or not I should have tried GMM instead of a K-means clustering. I don't that did much better with my features when I tried below, but I probably need to experiment more with my hyperparameters more."
    ]
   },
   {
